--- a/_data/data.yml
+++ b/_data/data.yml
@@ -8,14 +8,14 @@ sidebar:
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    name: Alan Doe
+    name: Sergio Puig
     tagline: Full Stack Developer
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    email: example@email.com
-    phone: 012 345 6789
-    timezone: America/Cancun # Enter your timezone, e.g., America/Havana, Africa/Casablanca, America/North_Dakota/Center
+    email: serpuimar2@alu.edu.gva
+    phone: 644 61 20 75
+    timezone: Europa/Madrid
     citizenship:
     website: https://example.com/ # Include the full website URL, including "http://" or "https://".
     linkedin: alandoe
