--- a/_data/data.yml
+++ b/_data/data.yml
@@ -20,7 +20,7 @@ sidebar:
     website: https://example.com/ # Include the full website URL, including "http://" or "https://".
     linkedin: alandoe
     xing: alandoe
-    github: jekyll
+    github: SergioPuigMartinez
     telegram: # add your nickname without '@' sign
     gitlab:
     bitbucket:
